syntax = "proto3";

package tempgrpcd;

message TempgrpcdRequest {
    uint32 version = 1;
    uint64 start_time = 2;
    uint64 end_time = 3;
    optional uint64 samples = 4;
}

message TempgrpcdResponse {
    uint32 version = 1;
    map<string, AmbientCondition> ambient_conditions = 2;
}

message AmbientCondition {
    float temperature = 1;
    float humidity = 2;
    float illumination = 3;
}

service Tempgrpcd {
    rpc GetAmbientConditions(TempgrpcdRequest) returns (TempgrpcdResponse);
}
